Fix: Settings input too wide for sml mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,3 +87,9 @@ h3 {
     width: 18%;
     margin-right: 2px;
 }
+
+/* SETTINGS STYLES */
+
+#avatar-upload {
+    max-width: 100%;
+    }
